test/scripted/compilation2/errors/impl_type_mismatch.bnj
# test:common

proto Stream {
    func write(self, data: *u8, size: usize);
}

# test:subtest
# test:error 12:10 "method type does not match declaration (expected 'func(*Stream, *u8, usize)', got 'func(*S)')"
# test:note 4:10 "method declared here, in proto 'Stream'"

struct S: Stream {
    func write(self) {}
}

# test:subtest
# test:error 20:10 "method type does not match declaration (expected 'func(*Stream, *u8, usize)', got 'func(*S, *u8, i32)')"
# test:note 4:10 "method declared here, in proto 'Stream'"

struct S: Stream {
    func write(self, data: *u8, size: i32) {}
}

# test:subtest
# test:error 28:10 "method type does not match declaration (expected 'func(*Stream, *u8, usize)', got 'func(*S, *u8, usize) -> bool')"
# test:note 4:10 "method declared here, in proto 'Stream'"

struct S: Stream {
    func write(self, data: *u8, size: usize) -> bool {}
}
